# brick

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
example/plugins/py_entry/: index.py  package.toml
example/plugins/shell/: entry_point.sh  package.toml
src/brick/: __init__.py  cli.py  constants.py  plugin.py
src/brick/cmd/: __init__.py  executor.py
src/brick/echo/: __init__.py  echo.py
