[metadata]
name = brick

license = BSD-3-Clause
author = sunshukang
author_email = sunshukang@top-stack.com
description = A simple shell scripts
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

# [options.entry_points]
# console_scripts =
#     bk = brick.cli:main

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
    # __init__ module exports names
    src/brick/__init__.py: F401

[mypy]
files = src/brick
python_version = 3.6
allow_redefinition = True
disallow_subclassing_any = True
# disallow_untyped_calls = True
# disallow_untyped_defs = True
# disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
# no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
# warn_return_any = True
# warn_unreachable = True

[mypy-asgiref.*]
ignore_missing_imports = True

[mypy-blinker.*]
ignore_missing_imports = True

[mypy-dotenv.*]
ignore_missing_imports = True